--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nextui-org/dropdown": "^2.1.17",
     "@nextui-org/system": "^2.0.15",
     "@nextui-org/theme": "^2.1.18",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@rainbow-me/rainbowkit": "^2.0.1",
@@ -36,6 +37,7 @@
     "lucide-react": "^0.350.0",
     "next": "14.1.3",
     "next-themes": "^0.2.1",
+    "qrcode": "^1.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.2.1",
@@ -51,6 +53,7 @@
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/eslint": "^8.56.5",
     "@types/node": "20.11.25",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "18.2.64",
     "@types/react-dom": "18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
