--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -13,6 +13,11 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
+      - name: Create .env file
+        run: |
+          touch .env
+          echo NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=${{ secrets.NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID }} > .env
+          cat .env
       - name: Install PNPM
         run: npm i -g pnpm
       - name: Install dependencies
