--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-toast": "^1.2.1",
     "@rainbow-me/rainbowkit": "^2.1.6",
     "@tanstack/react-query": "^5.56.2",
     "class-variance-authority": "^0.7.0",
@@ -40,6 +39,7 @@
     "qrcode": "^1.5.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "viem": "~2.21.9",
