--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@rainbow-me/rainbowkit": "^2.2.1",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.62.3",
+    "@vercel/analytics": "^1.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.13.1",
