--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.66.11",
     "@vercel/analytics": "^1.5.0",
+    "burner-connector": "^0.0.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
