--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@rainbow-me/rainbowkit": "^2.2.4",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.69.0",
+    "@tanstack/react-query-devtools": "^5.69.0",
     "@vercel/analytics": "^1.5.0",
     "burner-connector": "^0.0.11",
     "class-variance-authority": "^0.7.1",
