--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@commitlint/config-conventional": "^19.8.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@playwright/test": "^1.51.1",
+    "@tanstack/eslint-plugin-query": "^5.68.0",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/eslint": "^9.6.1",
     "@types/node": "22.13.10",
