--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "react-dom": "19.1.0",
     "sonner": "2.0.5",
     "tailwind-merge": "3.3.1",
-    "tailwindcss-animate": "1.0.7",
     "viem": "2.31.3",
     "wagmi": "2.15.6",
     "zod": "3.25.67"
@@ -60,13 +59,13 @@
     "@ianvs/prettier-plugin-sort-imports": "4.4.2",
     "@next/eslint-plugin-next": "15.3.4",
     "@playwright/test": "1.53.1",
+    "@tailwindcss/postcss": "4.1.10",
     "@tanstack/eslint-plugin-query": "5.78.0",
     "@total-typescript/ts-reset": "0.6.1",
     "@types/node": "24.0.3",
     "@types/qrcode": "1.5.5",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
-    "autoprefixer": "10.4.21",
     "cssnano": "7.0.7",
     "eslint": "9.29.0",
     "eslint-config-next": "15.3.4",
@@ -83,7 +82,8 @@
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.12",
     "sass": "1.89.2",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.1.10",
+    "tw-animate-css": "1.3.4",
     "typescript": "5.8.3",
     "typescript-eslint": "8.34.1"
   }
