chore: upgrade heroui to use tailwind v4

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,7 @@
 onlyBuiltDependencies:
   - '@heroui/shared-utils'
   - '@parcel/watcher'
+  - '@tailwindcss/oxide'
   - bufferutil
   - keccak
   - sharp
