--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "test:ui": "playwright test --ui"
   },
   "dependencies": {
-    "@heroui/button": "2.2.21",
-    "@heroui/skeleton": "2.2.13",
-    "@heroui/system": "2.4.17",
-    "@heroui/theme": "2.4.17",
+    "@heroui/button": "2.2.22-beta.1",
+    "@heroui/skeleton": "2.2.14-beta.1",
+    "@heroui/system": "2.4.18-beta.1",
+    "@heroui/theme": "2.4.18-beta.1",
     "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-dropdown-menu": "2.1.15",
     "@radix-ui/react-slot": "1.2.3",
