--- a/package.json
+++ b/package.json
@@ -24,67 +24,67 @@
     "test:ui": "playwright test --ui"
   },
   "dependencies": {
-    "@heroui/button": "2.2.22",
-    "@heroui/skeleton": "2.2.14",
-    "@heroui/system": "2.4.18",
-    "@heroui/theme": "2.4.18-beta.1",
-    "@radix-ui/react-dialog": "1.1.14",
-    "@radix-ui/react-dropdown-menu": "2.1.15",
+    "@heroui/button": "2.2.27",
+    "@heroui/skeleton": "2.2.17",
+    "@heroui/system": "2.4.23",
+    "@heroui/theme": "2.4.23",
+    "@radix-ui/react-dialog": "1.1.15",
+    "@radix-ui/react-dropdown-menu": "2.1.16",
     "@radix-ui/react-slot": "1.2.3",
     "@rainbow-me/rainbowkit": "2.2.8",
     "@t3-oss/env-nextjs": "0.13.8",
-    "@tanstack/react-query": "5.83.0",
-    "@tanstack/react-query-devtools": "5.83.0",
+    "@tanstack/react-query": "5.90.2",
+    "@tanstack/react-query-devtools": "5.90.2",
     "@vercel/analytics": "1.5.0",
     "burner-connector": "0.0.17",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "framer-motion": "12.23.5",
-    "lucide-react": "0.525.0",
-    "next": "15.3.5",
+    "framer-motion": "12.23.22",
+    "lucide-react": "0.544.0",
+    "next": "15.5.4",
     "next-themes": "0.4.6",
     "qrcode": "1.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "sonner": "2.0.6",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "sonner": "2.0.7",
     "tailwind-merge": "3.3.1",
-    "viem": "2.31.7",
-    "wagmi": "2.15.6",
-    "zod": "4.0.5"
+    "viem": "2.37.12",
+    "wagmi": "2.17.5",
+    "zod": "4.1.11"
   },
   "devDependencies": {
-    "@commitlint/cli": "19.8.1",
-    "@commitlint/config-conventional": "19.8.1",
+    "@commitlint/cli": "20.1.0",
+    "@commitlint/config-conventional": "20.0.0",
     "@eslint/eslintrc": "3.3.1",
-    "@ianvs/prettier-plugin-sort-imports": "4.5.1",
-    "@next/eslint-plugin-next": "15.3.5",
-    "@playwright/test": "1.54.1",
-    "@tailwindcss/postcss": "4.1.11",
-    "@tanstack/eslint-plugin-query": "5.81.2",
+    "@ianvs/prettier-plugin-sort-imports": "4.7.0",
+    "@next/eslint-plugin-next": "15.5.4",
+    "@playwright/test": "1.55.1",
+    "@tailwindcss/postcss": "4.1.14",
+    "@tanstack/eslint-plugin-query": "5.91.0",
     "@total-typescript/ts-reset": "0.6.1",
-    "@types/node": "24.0.13",
+    "@types/node": "24.6.2",
     "@types/qrcode": "1.5.5",
-    "@types/react": "19.1.8",
-    "@types/react-dom": "19.1.6",
-    "cssnano": "7.0.7",
-    "eslint": "9.31.0",
-    "eslint-config-next": "15.3.5",
-    "eslint-config-prettier": "10.1.5",
+    "@types/react": "19.2.0",
+    "@types/react-dom": "19.2.0",
+    "cssnano": "7.1.1",
+    "eslint": "9.37.0",
+    "eslint-config-next": "15.5.4",
+    "eslint-config-prettier": "10.1.8",
     "eslint-plugin-jsx-a11y": "6.10.2",
-    "eslint-plugin-prettier": "5.5.1",
+    "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "5.2.0",
-    "eslint-plugin-sonarjs": "3.0.4",
-    "eslint-plugin-unicorn": "59.0.1",
+    "eslint-plugin-react-hooks": "6.1.1",
+    "eslint-plugin-sonarjs": "3.0.5",
+    "eslint-plugin-unicorn": "61.0.2",
     "husky": "9.1.7",
-    "lint-staged": "16.1.2",
+    "lint-staged": "16.2.3",
     "postcss": "8.5.6",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.6.14",
-    "sass": "1.89.2",
-    "tailwindcss": "4.1.11",
-    "tw-animate-css": "1.3.5",
-    "typescript": "5.8.3",
-    "typescript-eslint": "8.37.0"
+    "sass": "1.93.2",
+    "tailwindcss": "4.1.14",
+    "tw-animate-css": "1.4.0",
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.45.0"
   }
 }
