--- a/package.json
+++ b/package.json
@@ -13,77 +13,77 @@
   },
   "scripts": {
     "postinstall": "husky & playwright install",
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "preview": "next start",
     "typecheck": "tsc --noEmit",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "format": "prettier --write **/**/*.{html,css,scss,js,jsx,cjs,mjs,ts,tsx,mdx} --cache",
     "test": "playwright test",
     "test:ui": "playwright test --ui"
   },
   "dependencies": {
-    "@heroui/button": "2.2.27",
-    "@heroui/skeleton": "2.2.17",
-    "@heroui/system": "2.4.23",
-    "@heroui/theme": "2.4.23",
+    "@heroui/button": "2.2.29",
+    "@heroui/skeleton": "2.2.18",
+    "@heroui/system": "2.4.25",
+    "@heroui/theme": "2.4.25",
     "@radix-ui/react-dialog": "1.1.15",
     "@radix-ui/react-dropdown-menu": "2.1.16",
-    "@radix-ui/react-slot": "1.2.3",
-    "@rainbow-me/rainbowkit": "2.2.8",
-    "@t3-oss/env-nextjs": "0.13.8",
-    "@tanstack/react-query": "5.90.2",
-    "@tanstack/react-query-devtools": "5.90.2",
-    "@vercel/analytics": "1.5.0",
+    "@radix-ui/react-slot": "1.2.4",
+    "@rainbow-me/rainbowkit": "2.2.10",
+    "@t3-oss/env-nextjs": "0.13.10",
+    "@tanstack/react-query": "5.90.16",
+    "@tanstack/react-query-devtools": "5.91.2",
+    "@vercel/analytics": "1.6.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "framer-motion": "12.23.22",
-    "lucide-react": "0.544.0",
-    "next": "15.5.4",
+    "framer-motion": "12.23.26",
+    "lucide-react": "0.562.0",
+    "next": "16.1.1",
     "next-themes": "0.4.6",
     "qrcode": "1.5.4",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "sonner": "2.0.7",
-    "tailwind-merge": "3.3.1",
-    "viem": "2.37.12",
-    "wagmi": "2.17.5",
-    "zod": "4.1.11"
+    "tailwind-merge": "3.4.0",
+    "viem": "2.43.5",
+    "wagmi": "3.1.4",
+    "zod": "4.3.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "20.1.0",
-    "@commitlint/config-conventional": "20.0.0",
-    "@eslint/eslintrc": "3.3.1",
+    "@commitlint/cli": "20.3.0",
+    "@commitlint/config-conventional": "20.3.0",
+    "@eslint/eslintrc": "3.3.3",
     "@ianvs/prettier-plugin-sort-imports": "4.7.0",
-    "@next/eslint-plugin-next": "15.5.4",
-    "@playwright/test": "1.55.1",
-    "@tailwindcss/postcss": "4.1.14",
-    "@tanstack/eslint-plugin-query": "5.91.0",
+    "@next/eslint-plugin-next": "16.1.1",
+    "@playwright/test": "1.57.0",
+    "@tailwindcss/postcss": "4.1.18",
+    "@tanstack/eslint-plugin-query": "5.91.2",
     "@total-typescript/ts-reset": "0.6.1",
-    "@types/node": "24.6.2",
-    "@types/qrcode": "1.5.5",
-    "@types/react": "19.2.0",
-    "@types/react-dom": "19.2.0",
-    "cssnano": "7.1.1",
-    "eslint": "9.37.0",
-    "eslint-config-next": "15.5.4",
+    "@types/node": "25.0.3",
+    "@types/qrcode": "1.5.6",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
+    "cssnano": "7.1.2",
+    "eslint": "9.39.2",
+    "eslint-config-next": "16.1.1",
     "eslint-config-prettier": "10.1.8",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-prettier": "5.5.4",
     "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "6.1.1",
+    "eslint-plugin-react-hooks": "7.0.1",
     "eslint-plugin-sonarjs": "3.0.5",
-    "eslint-plugin-unicorn": "61.0.2",
+    "eslint-plugin-unicorn": "62.0.0",
     "husky": "9.1.7",
-    "lint-staged": "16.2.3",
+    "lint-staged": "16.2.7",
     "postcss": "8.5.6",
-    "prettier": "3.6.2",
-    "prettier-plugin-tailwindcss": "0.6.14",
-    "sass": "1.93.2",
-    "tailwindcss": "4.1.14",
+    "prettier": "3.7.4",
+    "prettier-plugin-tailwindcss": "0.7.2",
+    "sass": "1.97.1",
+    "tailwindcss": "4.1.18",
     "tw-animate-css": "1.4.0",
     "typescript": "5.9.3",
-    "typescript-eslint": "8.45.0"
+    "typescript-eslint": "8.51.0"
   }
 }
