--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "@radix-ui/react-slot": "1.2.4",
     "@rainbow-me/rainbowkit": "2.2.10",
     "@t3-oss/env-nextjs": "0.13.10",
+    "@tabler/icons-react": "3.36.1",
     "@tanstack/react-query": "5.90.16",
     "@tanstack/react-query-devtools": "5.91.2",
     "@vercel/analytics": "1.6.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "framer-motion": "12.23.26",
-    "lucide-react": "0.562.0",
     "next": "16.1.1",
     "next-themes": "0.4.6",
     "qrcode": "1.5.4",
